Update user validation and add dotenv support

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENAI_API_KEY='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'
+OPENAI_API_KEY='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'
+SECRET_KEY='sk-kQiwMOUUE6MuJcn6FIlp+JU1Z4AUGgWF92Pnfy9qcJk='
