Update API key and add API key verification

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 OPENAI_API_KEY='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'
 SECRET_KEY='sk-kQiwMOUUE6MuJcn6FIlp+JU1Z4AUGgWF92Pnfy9qcJk='
+API_KEY = 'BDeZnpabL9xww0i7//92MTheqnOzKZg4LK+Zu6w8ERk='
