--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-OPENAI_API_KEY='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'
-SECRET_KEY='sk-kQiwMOUUE6MuJcn6FIlp+JU1Z4AUGgWF92Pnfy9qcJk='
+OPENAI_API_KEY='YOUR_OPENAI_API_KEY'
+SECRET_KEY='YOUR_API_KEY'
 API_KEY = 'BDeZnpabL9xww0i7//92MTheqnOzKZg4LK+Zu6w8ERk='
