--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 OPENAI_API_KEY='YOUR_OPENAI_API_KEY'
-SECRET_KEY='YOUR_API_KEY'
-API_KEY = 'BDeZnpabL9xww0i7//92MTheqnOzKZg4LK+Zu6w8ERk='
+SECRET_KEY='YOUR_SECRET_KEY' # JWT Secret Key
+API_KEY = 'YOUR_API_KEY' # API Key for FastAPI
